--- a/Tarjetas Black.ipynb
+++ b/Tarjetas Black.ipynb
@@ -110,7 +110,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![png](./images/modelo.png)"
+    "![png](./Relationship_tables)"
    ]
   },
   {
