--- a/Tarjetas Black.ipynb
+++ b/Tarjetas Black.ipynb
@@ -110,7 +110,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![png](https://github.com/Santiesb/SQL-Exercises/blob/master/Relationship_tables.PNG)"
+    "![png](./https://github.com/Santiesb/SQL-Exercises/blob/master/Relationship_tables.PNG)"
    ]
   },
   {
