--- a/Tarjetas Black.ipynb
+++ b/Tarjetas Black.ipynb
@@ -110,7 +110,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![png](./https://github.com/Santiesb/SQL-Exercises/blob/master/Relationship_tables.PNG)"
+    "![my_image](Images/Relationship_tables.png)
+<center><img src="Images/Relationship_tables.png" width=400px></center>"
    ]
   },
   {
