--- a/Tarjetas Black.ipynb
+++ b/Tarjetas Black.ipynb
@@ -110,8 +110,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![my_image](Images/Relationship_tables.png)
-<center><img src="Images/Relationship_tables.png" width=400px></center>"
+    "![my_image](Images/Relationship_tables.png)"
    ]
   },
   {
