--- a/Tarjetas Black.ipynb
+++ b/Tarjetas Black.ipynb
@@ -110,7 +110,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Relationship_tables.png](Images/Relationship_tables.png)"
+    "![Relationship_tables](./Images/Relationship_tables.png)"
    ]
   },
   {
